--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -72,7 +72,7 @@
 	<br>
 	<br>
 		 <a id="partieune">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie2">
 				<img src="https://drive.google.com/uc?id=1gecQp38USN0W6e5NmzN0I6GC7_oJXk_v" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -81,7 +81,7 @@
 				<img src="https://drive.google.com/uc?id=1AnbWKyAi0DF3nwlCKwqsBSUNxp6jw4dr" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="https://drive.google.com/uc?id=1bjTGCPh0onEND6UIepMMsAfjxg8ZGbAp" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1bjTGCPh0onEND6UIepMMsAfjxg8ZGbAp" alt="Ne_pas_mourir_comme_des_chiens/mamoste_din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
 				<img src="https://drive.google.com/uc?id=1-d9uA9r0j6DTxzdhXiAHP_KsVmDzP1ig" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -99,10 +99,10 @@
 				<img src="https://drive.google.com/uc?id=1-QBlmItr22IIrmhf66ermp51Ri0cyuzK" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page10.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page10.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page11.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page11.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=1WXFWxsoMCyc6p1yRa8y02o-o_gzcgoOu" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -120,7 +120,7 @@
 				<img src="https://drive.google.com/uc?id=1uFh-FUB-BRdXAjiPa5nqH6D76iBbaVkn" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1rWEI9zaiAIZM2Dzf9fkDP-Kkx4Le7Z9u" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1rWEI9zaiAIZM2Dzf9fkDP-Kkx4Le7Z9u" alt="Ne_pas_mourir_comme_des_chiens/mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
 				<img src="https://drive.google.com/uc?id=1Pf4kJ90VDr74uC-ydsMjfCgbJ38ZaJRd" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -162,7 +162,7 @@
 				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page30.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="https://drive.google.com/uc?id=1Q_18yFHi9fBGIXPkU-lSHg5UxqdOiPpX" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1Q_18yFHi9fBGIXPkU-lSHg5UxqdOiPpX" alt="Ne_pas_mourir_comme_des_chiens/mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie8">
 				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page32.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -198,7 +198,7 @@
 				<img src="https://drive.google.com/uc?id=11F1D2UcpmSyvupzXQ9fAWAk73CcEZuW0" alt="Ne pas mourir comme des chiens de Mamoste Din p 42" width="850" height="auto" />
 			</a>
          <a id="partie7">
-				<img src="https://drive.google.com/uc?id=18GEZ80x4xnvTooXHdXsHtsYip4UAPq3Z" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=18GEZ80x4xnvTooXHdXsHtsYip4UAPq3Z" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie8">
 				<img src="https://drive.google.com/uc?id=1H-tpF3h6sWLcOXTGGWkRyQJiCsjjM151" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -243,10 +243,10 @@
 				<img src="https://drive.google.com/uc?id=1yRZWJmKLEt8fS6f8iJKH8Bh9JhY_0tBj" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a> 
          <a id="partie10">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page58.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page58.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page59.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page59.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=14JOZGjrSeJnkr0sI_jrrHnXinsK9Ttd5" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -336,7 +336,7 @@
 				<img src="https://drive.google.com/uc?id=1Yn5UFMOQhpAw6dEdAn0Dwxemg-po7flf" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1FsYw-HQd-80R18Fboa8FYJY_nu0bOGeO" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1FsYw-HQd-80R18Fboa8FYJY_nu0bOGeO" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
 				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page90.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din p 90" width="850" height="auto" />
@@ -354,7 +354,7 @@
 				<img src="https://drive.google.com/uc?id=14Nd2cOQMoVm9Wwk6EgWCPNBp1U9t5tId" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie11">
-				<img src="https://drive.google.com/uc?id=1WWlcw5oZb-3SbcZDW99K3jP6XgwMWken" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1WWlcw5oZb-3SbcZDW99K3jP6XgwMWken" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=1JxUH-WTBdJxi9tgLSrSefmsWrhVMF4q7" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
@@ -369,10 +369,10 @@
 				<img src="https://drive.google.com/uc?id=1d3CFmxBF_GZ3tAuZOAQR5XyxE0Z10o_v" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
 			</a>
          <a id="partie4">
-				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page100.jpg" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="image_site/Nepasmourircommedeschiens_MamosteDîn_page100.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a>	
           <a id="partie5">
-				<img src="https://drive.google.com/uc?id=1O0DJfV6rWGHAwHfYXdcwkx8zq39XJT5s" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1O0DJfV6rWGHAwHfYXdcwkx8zq39XJT5s" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie6">
 				<img src="https://drive.google.com/uc?id=1Dp6AMaJvStOQKexL02ZyWv5JDp5vVJkB" alt="Ne pas mourir comme des chiens de Mamoste Din" width="850" height="auto" />
