--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -94,7 +94,7 @@
 			    <tr>
 			        <td width="200" id="imagesdesbd"><br>
 			            <a id="nepasmourircouv" rel="couverturedemamostedin" href="plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html">
-			            <img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="couverturebdMamostedin" width="200" height="auto" /></a>
+			            <img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="200" height="auto" /></a>
 			        </td>
 				
 					
