--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -91,13 +91,13 @@ partageons un moment de la vie du camp et apprenons à
             <br>
 			    <tr>
 			        <td width="250" id="imagesdesbd"><br>
-			            <img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg " alt="couverturebdMamostedin" width="300" height="auto" /></a>
+			            <img src="image_site/Nepasmourircommedeschiens_MamosteDîn.jpg " alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="300" height="auto" /></a>
 			        </td>
 				    <td width="250" id="imagesdesbd"><br>
-			            <img src="image_site/BD-nepasmourircommedeschiens.jpg" alt="couverturebdMamostedin" width="300" height="auto" /></a>
+			            <img src="image_site/BD-nepasmourircommedeschiens.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="300" height="auto" /></a>
 			        </td>
 					<td width="250" id="imagesdesbd"><br>
-			            <img src="image_site/BD-nepasmourircommedeschiens2.jpg" alt="couverturebdMamostedin" width="300" height="auto" /></a>
+			            <img src="image_site/BD-nepasmourircommedeschiens2.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="300" height="auto" /></a>
 			        </td>
 					
 	               
