--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -72,8 +72,8 @@
 	
 	<br>
 	<br>
-			<caption>mail général <span><h3>plagiatedition(at)protonmail.com</h3>
-			<p>mail bande dessinée </p><h3>bd-graphisme-plagiat(at)protonmail.com</h3>
+			<caption>mail général <span><h3>plagiatedition@protonmail.com</h3>
+			<p>mail bande dessinée </p><h3>bd-graphisme-plagiat@protonmail.com</h3>
 			<br>Ne pas hésiter à nous contacter avec le mail adéquat pour nous relayer textes ou autres productions&#8239;.</caption>  
 				
 	
