--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -101,7 +101,7 @@
 			            </td>
 				    
 				 <td width="50" id="tweeter"><br>
-			                <a id="legende" rel="article" href="https://www.google.com/maps/d/viewer?mid=1B24mI0caHQtcN4IjgWfAidDev2eN-_FG&ll=48.85379502143303%2C2.3550642716851744&z=12">
+			                <a id="legende" rel="article" href="https://www.instagram.com/editionsplagiat">
 			                <img src="image_site/insta.png" alt="insta" width="50" height="auto" /></a>
 			            </td>
 				    
