--- a/plagiat_ed_liens.html
+++ b/plagiat_ed_liens.html
@@ -133,6 +133,11 @@
 			            <img src="https://drive.google.com/uc?id=1g-fzH5EqP3a7Ge9fqXzpVgU8W-wsWqaM" alt="palim.psao" width="150" height="auto" /></a>
 					<figcaption><span>palim-psao<span></figcaption>
 			        </td>
+					<td width="250" id="pso">
+					<a id="lesabot" rel="logo" href="https://le-sabot.fr">
+			            <img src="https://drive.google.com/file/d/1PM5HkG5bOSazWdc-L128mm8oMIkXKQly/view?usp=sharing" alt="le.sabot" width="150" height="auto" /></a>
+					<figcaption><span>Le Sabot<span></figcaption>
+			        </td>
 		        </tr>
 			
 	        </table>
