--- a/plagiat_ed_liens.html
+++ b/plagiat_ed_liens.html
@@ -135,7 +135,7 @@
 			        </td>
 					<td width="250" id="pso">
 					<a id="lesabot" rel="logo" href="https://le-sabot.fr">
-			            <img src="https://drive.google.com/file/d/1PM5HkG5bOSazWdc-L128mm8oMIkXKQly/view?usp=sharing" alt="le.sabot" width="150" height="auto" /></a>
+			            <img src="https://drive.google.com/uc?id=1PM5HkG5bOSazWdc-L128mm8oMIkXKQly" alt="le.sabot" width="150" height="auto" /></a>
 					<figcaption><span>Le Sabot<span></figcaption>
 			        </td>
 		        </tr>
