--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -23,7 +23,7 @@
 					<a id="corpus" rel="elephant">
 				<img src="image_site/café.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>La boutade d'un Français à l'occasion de l'établissement projeté d'une taxe sur les chiens «&#8239;Pauvres chiens&#8239;! on veut vous traiter comme des hommes&#8239;!&#8239;»
+			<figcaption><span><cite>La boutade d'un Français à l'occasion de l'établissement projeté d'une taxe sur les chiens<br> «&#8239;Pauvres chiens&#8239;! on veut vous traiter comme des hommes&#8239;!&#8239;»
 			</cite>Marx dans Contribution à la critique de La philosophie du droit de Hegel<span></figcaption>
 			        </td>
 		    </tr>
