--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -23,7 +23,7 @@
 			<a id="enteteaction-histoire" rel="elephant">
 				<img src="image_site/pagehistoire2.jpg" alt="Plagiat Editions entête"  />
 			</a>
-			<figcaption><span><cite></cite><span></figcaption>
+			<figcaption><span><cite>Le petit homme ignore qu'il est petit et il a peur d'en prendre conscience.<br> Il dissimule sa petitesse et son étroitesse d'esprit derrière des rêves de force et de grandeur,<br> derrière la force et la grandeur d'autres hommes.</cite> Wilhem Reich, <i>Ecoute petit homme!</i><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
