--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -19,7 +19,7 @@
 			        </td>
 				
 					
-	                <td width="950" height="175" id="entete">
+	                <td width="950"  id="entete">
 					<a id="corpus" rel="elephant">
 				<img src="image_site/café.jpg" alt="Plagiat Editions entête" />
 			</a>
