--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -23,8 +23,7 @@
 					<a id="corpus" rel="elephant">
 				<img src="image_site/café.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>La boutade d'un Français à l'occasion de l'établissement projeté d'une taxe sur les chiens<br> «&#8239;Pauvres chiens&#8239;! on veut vous traiter comme des hommes&#8239;!&#8239;»
-			</cite><br>Marx, Contribution à la critique de La philosophie du droit de Hegel<span></figcaption>
+			<figcaption><span><cite>"&#8239;Avant de te faire confiance, je voudrais connaître ta philosophie de la vie&#8239;!&#8239;"<br>Or, si je t'exposais ma philosophie de la vie, tu te précipiterais chez le procureur général</cite><br>Wilhem Reich, Ecoute petit homme&#8239;!<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
