--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -23,8 +23,8 @@
 					<a id="boutique" rel="elephant">
 				<img src="image_site/entêteboutique.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
-			<figcaption><span><cite>La boutade d'un Français à l'occasion de l'établissement projeté d'une taxe sur les chiens<br> «&#8239;Pauvres chiens&#8239;! on veut vous traiter comme des hommes&#8239;!&#8239;»
-			</cite><br>Marx, Contribution à la critique de La philosophie du droit de Hegel <span></figcaption>
+			<figcaption><span><cite>«&#8239;Pauvres chiens&#8239;! on veut vous traiter comme des hommes&#8239;!&#8239;»
+			</cite><br>Marx<span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
