--- a/plagiat_ed_contacts.html
+++ b/plagiat_ed_contacts.html
@@ -23,7 +23,7 @@
 					<a id="contacts" rel="tolbiac">
 				<img src="image_site/tolbiac.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
-			<figcaption><span><cite>Lever matin n'est point bonheur&#8239;; boire matin est le meilleur&#8239;.</cite> Rabelais<span></figcaption>
+			<figcaption><span><cite>Lever matin n'est point bonheur&#8239;; boire matin est le meilleur&#8239;.</cite><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
