--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -23,7 +23,7 @@
 					<a id="corpus" rel="elephant">
 				<img src="image_site/café.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>"&#8239;Avant de te faire confiance, je voudrais connaître ta philosophie de la vie&#8239;!&#8239;"<br>Or, si je t'exposais ma philosophie de la vie, tu te précipiterais chez le procureur général</cite><br>Wilhem Reich, Ecoute petit homme&#8239;!<span></figcaption>
+			<figcaption><span><cite>"&#8239;Avant de te faire confiance, je voudrais connaître ta philosophie de la vie&#8239;!&#8239;"<br>Or, si je t'exposais ma philosophie de la vie, tu te précipiterais chez le procureur général</cite><br><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
