--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -24,7 +24,7 @@
 				<img src="image_site/entêteboutique.jpg" alt="Plagiat Editions entête" width="900" height="167" />
 			</a>
 			<figcaption><span><cite>«&#8239;Pauvres chiens&#8239;! on veut vous traiter comme des hommes&#8239;!&#8239;»
-			</cite><br>Marx<span></figcaption>
+			</cite><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
