--- a/plagiat_ed_index.html
+++ b/plagiat_ed_index.html
@@ -23,7 +23,7 @@
 					<a id="contact" rel="elephant">
 				<img src="image_site/bois.jpg" alt="Plagiat Editions entête" />
 			</a>
-			<figcaption><span><cite>La construction des villes sera l'affaire de tous quand le dernier urbaniste aura été pendu avec les tripes du dernier pédagogue.</cite><span></figcaption>
+			<figcaption><span><cite>La construction des villes sera l'affaire de tous quand le dernier urbaniste aura été pendu<br>avec les tripes du dernier pédagogue.</cite><span></figcaption>
 			        </td>
 		    </tr>
 		</table >	
