--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -71,7 +71,7 @@
 	<br>
 	
 	
-			<caption><span><h3>Catalogue des bandes dessinées parues et en libre accès.
+			<caption><span><h3>Bandes dessinées parues et en libre accès.
 				</h3>Lecture en ligne (cliquer sur l'image ou sur le lien pdf).
 			<br>Attention, les pdf sont très lourds afin de garder les qualités du dessin. 
 			<br>Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
