--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -121,7 +121,7 @@
 			                <img src="https://drive.google.com/uc?id=1O_up6dP1qOKXN-3XBt3uHO1_QSCuvDt5" alt="1953" width="200" height="auto" /></a>
 			            </td>
 						
-	                    <td width="325" id="protestations">
+	                    <td width="325" id="socialisme">
 						<p><span><i><br>Lettre à Socialisme ou Barbarie</i><span></p>
                             <p><span>1953, par Anton Pannekoek <span></p> 
 							<a href="https://drive.google.com/uc?id=1fiYMiYO4qmG7oaMvZ3LONZkzypq9X9ve" title="Pdf">
@@ -222,7 +222,7 @@
 	                    <td width="325" id="merAral">
 						<p><span><i><br>La planète malade</i><span></p>
 						<p><span>1971, par Guy Debord<span></p>
-						<a href="https://drive.google.com/uc?id=1sbrZz9AZ9lTtVL1clGKFimi4NrX0Jpc2" title="Pdf">
+						<a href="https://drive.google.com/uc?id=1YqH-a1nSMyVS58O4ir7LEEsxM7qLXUBO" title="Pdf">
 						<p><span><u>La planète malade (.pdf)</u><span></p></a>
 						</a>
 			            </td>
