--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -108,7 +108,7 @@ partageons un moment de la vie du camp et apprenons à
 				<td width="250" id="textesdesbd">
 					<p><span><i>Ne pas mourir comme des chiens</i><span></p>
 					<p><span>de Mamoste Dîn<span></p>
-					<p><span>Achevé d'imprimer en 2021 en France</p>
+					<p><span>Achevé d'imprimer en mars 2021 à Venise</p>
 					<p><span><b>prix 12 euros</b>, sans frais de port<span></p>
 					
 				
