--- a/plagiat_ed_histoire_protestations-1937.html
+++ b/plagiat_ed_histoire_protestations-1937.html
@@ -71,7 +71,9 @@
 			          
 	                    <td width="500" id="titre"><span><h4><br>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</h4>
 						<h4>Par un «&#8239;Incontrôlé&#8239;» de la Colonne&#8239;de&#8239;Fer,</h4><span>
-						<h5>traduit de l’espagnol par deux aficionados sans qualités<br>illustré par Mamoste&#8239;Dîn</h5><span>
+						<h5>traduit de l’espagnol par deux aficionados sans qualités,<br>préface des Editions Plagiat,
+							<br>accompagné d'affiche de Bauset graveur de la Colonne de Fer 
+							<br>et illustré par Mamoste&#8239;Dîn</h5><span>
 			            </td>
 		            </tr>
 					
