--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -110,7 +110,7 @@
 	                    <td width="325" id="protestations">
 						<p><span><i><br>Protestation devant les libertaires du présent et du futur sur les capitulations de 1937</i><span></p>
                             <p><span>Par un Incontrôlé de la Colonne de Fer <span></p> 
-							<a href="https://drive.google.com/file/d/uc?id=1nq6HIL2W8fgspoiXJtBoK8smj09z2FDR" title="Pdf">
+							<a href="https://drive.google.com/uc?id=1nq6HIL2W8fgspoiXJtBoK8smj09z2FDR" title="Pdf">
 							<p><span><u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
