--- a/plagiat_ed_socle_théorique.html
+++ b/plagiat_ed_socle_théorique.html
@@ -93,7 +93,7 @@
 	                    <td width="325" id="protestations">
 						<p><span><i><br>Contribution à la critique de La philosophie du droit de Hegel</i><span></p>
                             <p><span>1843, par Karl Marx <span></p> 
-							<a href="https://drive.google.com/file/d/1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB/view?usp=sharing" title="Pdf">
+							<a href="https://drive.google.com/uc?id=1i6x_DSKdEqMiWmqvAsEZeejQyVsxmmnB" title="Pdf">
 							<p><span><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a><span></p>
 			            </td>
 		            </tr>
