--- a/plagiat_ed_liens.html
+++ b/plagiat_ed_liens.html
@@ -72,7 +72,7 @@
 	
 	<br>
 	<br>
-			<caption><span><h3>Quelques liens utiles</h3><span></caption>    
+			<caption><span><h3>Quelques liens utiles :</h3><span></caption>    
 	         
             <br>
 			
@@ -162,6 +162,10 @@
 			        </td>
 		        </tr>
 	        </table>
+		<br>
+			<caption><span><h3>Quelques vidéos utiles non hébergées par ce site :</h3><span></caption>    
+	         
+            <br>			
 		<table>
 				<tr>
 							<td width="250" id="marcos">
