--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -100,6 +100,8 @@
 					<p>Disponible aussi en anglais sur Drawing the times
 					<a href="https://visionscarto.net/ne-pas-mourir-comme-des-chiens" title="cliquer">
 					<br>En français sur VisionCarto <span></p> 
+					<a href="plagiat_ed_BD_entretien-Mamoste" title="cliquer">
+					<br>Entretien avec Mamoste Dîn<span></p>
 					
 			        </td>
 		        </tr>
