--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -100,7 +100,7 @@
 					<p>Disponible aussi en anglais sur Drawing the times
 					<a href="https://visionscarto.net/ne-pas-mourir-comme-des-chiens" title="cliquer">
 					<br>En français sur VisionCarto <span></p> 
-					<a href="http://les-editions-plagiat.fr/plagiat_ed_BD_entretien-Mamoste" title="cliquer">
+					<a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer">
 					<br>Entretien avec Mamoste Dîn<span></p>
 					
 			        </td>
