Update and rename plagiat_ed_BD_entretien-Mamoste to plagiat_ed_BD_entretien-Mamoste.html

--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -82,12 +82,14 @@
 					
 					<tr>
 	                    <td width="500" id="article">
-					<h5><br>version française</h5> <a href="http://les-editions-plagiat.fr/plagiat_ed_BD_entretien-Mamoste_turc" title="cliquer"> version turque </h5><span>
+					<h5><br>version française</h5> <a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer"> version turque </h5><span>
 
 <p><span>
 Bonjour, pouvez-vous vous présenter pour nos lecteurs et lectrices ?
-<br> 
-<i>Bonjour, je suis une jeune auteure de BD et illustratrice, française, qui travaille actuellement sous le nom de Mamoste Dîn [« Mamoste Dîn » signifie « professeur folle » en kurde]. Ce nom me fut donné par des personnes du camp de Lavrio à qui je faisais faire de la gravure et des impressions.</i><span></p>
+<br> <i>Bonjour, je suis une jeune auteure de BD et illustratrice, française, qui travaille actuellement sous le nom de Mamoste Dîn [« Mamoste Dîn » signifie « professeur folle » en kurde]. Ce nom me fut donné par des personnes du camp de Lavrio à qui je faisais faire de la gravure et des impressions.</i><span></p>
+<p><span>Comment avez vous fait la connaissance du mouvement kurde 
+<br> <i>Historiquement. Autrement dit, de la même manière que je me suis documentée sur la guerre d’Espagne en 1936, l’IRA, les zapatistes, les situationnistes, les guérillas et les divers mouvements révolutionnaires historiques. Il me semble impossible de ne pas avoir ces repères si l’on veut être pertinent politiquement. Il faut, pour avoir une compréhension juste de notre société et une perspective stratégique, connaître les différents mouvements de protestation anticapitalistes, antifascistes et révolutionnaires.
+</i><span></p>
 <p><span>Comment avez vous été emmenée à vous rendre aux camps de réfugiés kurdes de Lavrio et d’où est partie l’idée de faire une bande dessinée sur le sujet ?
 <br><i>J’ai pu connaître le camp de Lavrio grâce à une amie de longue date et camarade géographe (étudiante) qui avait fait son mémoire de master sur le camp. Elle connaissait mon travail, mes dessins et aussi mes considérations politiques et elle m’a proposé de venir avec elle, pour dessiner les lieux et travailler sur l’endroit.
 </i><span></p>
