--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -4,7 +4,7 @@
 <title>Editions Plagiat entretien Mamoste</title>  
 <link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. BD, Roman Graphique, Lecture en ligne." />
-<link rel="stylesheet" href="plagiat_ed_BD.css" />
+<link rel="stylesheet" href="plagiat_ed_BD_entretiens.css" />
 </head>
 <body>
 
@@ -82,7 +82,7 @@
 					
 					<tr>
 	                    <td width="500" id="article">
-					<h5><br>version française</h5> <a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer"> version turque </h5><span>
+					<h5><br>version française ou <a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer">version turque </h5><span>
 
 <p><span>
 Bonjour, pouvez-vous vous présenter pour nos lecteurs et lectrices ?
