--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -82,42 +82,41 @@
 					
 					<tr>
 	                    <td width="500" id="article">
-					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"> version française</h5> version turque </h5><span>
+					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"> version française version turque </h5><span>
 
-<p><span>
-Okurlarımız için öncelikle kendinizi tanıtabilir misiniz?
-<br> 
-<i>
+<p><span><h5>
+Okurlarımız için öncelikle kendinizi tanıtabilir misiniz?</h5>
+<br><i>
 Genç bir çizgi roman yazarı ve çizerim, Fransızım. Şu an Mamoste Dîn ismiyle çalışıyorum. Mamoste Dîn Kürtçe, “deli hoca, deli öğretmen” anlamına geliyormuş. Bu ismi bana, Lavrion kampında çizim ve gravürler yaptırdığım insanlar verdi.</i><span></p>
-<p><span>Kürt hareketiyle nasıl tanıştınız?
+<p><span><h5>Kürt hareketiyle nasıl tanıştınız?</h5>
 <br><i>Tarih okumalarıyla. Yani, 1936 İspanya savaşı, İRA, Zapatistalar, Sitüasyonist Enternasyonal, gerillalar ve tarihi devrimci hareketler hakkında nasıl araştırmalar yaptıysam öyle tanıştım. Bir politik bilince sahip olmak istiyorsak bu referanslara sahip olmamız gerekiyor. İçinde bulunduğumuz toplumu anlayabilmek ve stratejik bir bakış açısı edinebilmek için farklı antikapitalist, antifaşist ve devrimci hareketleri tanımamız gerekiyor.
 </i><span></p>
-<p><span>Lavrion’daki mülteciler kampına gitmeye ve bir çizgi roman hazırlamaya nasıl karar verdiniz?
+<p><span><h5>Lavrion’daki mülteciler kampına gitmeye ve bir çizgi roman hazırlamaya nasıl karar verdiniz?</h5>
 <br><i>
 Lavrion kampından, çok eskiden beri tanıdığım bir dostum, yoldaşım sayesinde haberdar oldum. Kendisi coğrafyacı ve master tezini bu kamp üzerine yapmıştı. Yaptığım işleri, çizimlerimi ve politik bakışımı bilen bir arkadaş. Kampı çizmem ve oranın üzerine çalışmam için kendisiyle gitmemi önerdi.
 </i><span></p>
-<p><span>Kampta sizi etkileyen ve bizimle paylaşmak istediğiniz anılarınız var mı?
+<p><span><h5>Kampta sizi etkileyen ve bizimle paylaşmak istediğiniz anılarınız var mı?</h5>
 <br><i>Çizgi romanda bulunan anılardan bahsedebilir miyim yoksa okuyacak olanların oradan keşfetmesine izin mi verelim bilmiyorum. Mesela kampta, yöneticilerin birinden öğrendiğim ilk Kürtçe kelimelerim, “sen delisin!” ve “doktor nerede?”.
 <br>Bu cümleleri kafamda iyice tekrarladıktan sonra, yeni bilgilerimi gururla paylaşmak için karşıma çıkan ilk insana doğru koştum. Tabii o günden sonra herkes bana “deli öğretmen” diye seslenmeye başladı. “Öğretmen” demelerinin sebebi kampta bir gravür atölyesi yapmam, onlara gravür öğretmemdi. İlk kelimem “deli” olduğu için de “deli öğretmen” diye kaldı ismim. Sorunuza cevap vermek çok zor çünkü çok anım var ve hangisi daha ilginç bilmiyorum.
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
-<p><span>
+<p><span><h5> </h5>
 <br><i>
 </i><span></p>
 	
