--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -98,7 +98,9 @@ Lavrion kampından, çok eskiden beri tanıdığım bir dostum, yoldaşım sayes
 <p><span><h5>Kampta sizi etkileyen ve bizimle paylaşmak istediğiniz anılarınız var mı?</h5>
 <br><i>Çizgi romanda bulunan anılardan bahsedebilir miyim yoksa okuyacak olanların oradan keşfetmesine izin mi verelim bilmiyorum. Mesela kampta, yöneticilerin birinden öğrendiğim ilk Kürtçe kelimelerim, “sen delisin!” ve “doktor nerede?”.
 <br>Bu cümleleri kafamda iyice tekrarladıktan sonra, yeni bilgilerimi gururla paylaşmak için karşıma çıkan ilk insana doğru koştum. Tabii o günden sonra herkes bana “deli öğretmen” diye seslenmeye başladı. “Öğretmen” demelerinin sebebi kampta bir gravür atölyesi yapmam, onlara gravür öğretmemdi. İlk kelimem “deli” olduğu için de “deli öğretmen” diye kaldı ismim. Sorunuza cevap vermek çok zor çünkü çok anım var ve hangisi daha ilginç bilmiyorum.
-<p><span><h5> </h5>
+<br>Kamptaki insanların ikişer ikişer, yan yana, bazen birbiriyle hiç konuşmadan sadece sigaralarını tüttürerek, düzenli bir şekilde avluda gezindiği saatler var mesela. Birlikte adımlayan iki kişi birbiriyle hiç konuşmadan yürüyordu. Cezaevi yıllarında edindikleri volta alışkanlığındandı bu.
+	<br>Lavrion kampında bolca sigara ve çay içilirdi. Paketi ilk çıkaran kişi bütün diğer yoldaşlarına uzatırdı sigarasını. Aynı şey çay için de geçerliydi. Öyleki herkes çay, şeker ve sigara kokardı sanki.
+<p><span><h5>Lavrion kampı sizde ne gibi bir etki bıraktı, bu deneyimden ne gibi izler taşıyorsunuz ? Kürt mücadelesi ile Fransa’daki mücadeleler arasında bir fark bulunuyor mu? </h5>
 <br><i>
 </i><span></p>
 <p><span><h5> </h5>
