--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -82,7 +82,7 @@
 					
 					<tr>
 	                    <td width="500" id="article">
-					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"> version française version turque </h5><span>
+					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"></a> version française version turque </h5><span>
 
 <p><span><h5>
 Okurlarımız için öncelikle kendinizi tanıtabilir misiniz?</h5>
