--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -82,7 +82,8 @@
 					
 					<tr>
 	                    <td width="500" id="article">
-					<h5><br>version française ou <a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer"></a>version turque </h5><span>
+					<h5><br>version française ou 
+						<a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer">version turque </h5></a><span>
 
 <p><span><h5>
 Bonjour, pouvez-vous vous présenter pour nos lecteurs et lectrices ?</h5>
