--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -83,19 +83,19 @@
 					<tr>
 	                    <td width="500" id="article">
 					<h5><br>version française ou 
-						<a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer">version turque </h5></a><span>
+						<a href="plagiat_ed_BD_entretien-Mamoste_turc.html" title="cliquer">version turque </h5></a><span><br>
 
-<p><span><h5>
-Bonjour, pouvez-vous vous présenter pour nos lecteurs et lectrices ?</h5>
-<br> <i>Bonjour, je suis une jeune auteure de BD et illustratrice, française, qui travaille actuellement sous le nom de Mamoste Dîn [« Mamoste Dîn » signifie « professeur folle » en kurde]. Ce nom me fut donné par des personnes du camp de Lavrio à qui je faisais faire de la gravure et des impressions.</i><span></p>
-<p><span><h5>Comment avez vous fait la connaissance du mouvement kurde?</h5>
+<span><h5>
+Bonjour, pouvez-vous vous présenter pour nos lecteurs et lectrices ?</h5><span>
+<p><span><i>Bonjour, je suis une jeune auteure de BD et illustratrice, française, qui travaille actuellement sous le nom de Mamoste Dîn [« Mamoste Dîn » signifie « professeur folle » en kurde]. Ce nom me fut donné par des personnes du camp de Lavrio à qui je faisais faire de la gravure et des impressions.</i><span></p>
+<p><span><h5>Comment avez vous fait la connaissance du mouvement kurde?</h5><span>
 <br> <i>Historiquement. Autrement dit, de la même manière que je me suis documentée sur la guerre d’Espagne en 1936, l’IRA, les zapatistes, les situationnistes, les guérillas et les divers mouvements révolutionnaires historiques. Il me semble impossible de ne pas avoir ces repères si l’on veut être pertinent politiquement. Il faut, pour avoir une compréhension juste de notre société et une perspective stratégique, connaître les différents mouvements de protestation anticapitalistes, antifascistes et révolutionnaires.
 </i><span></p>
 <p><span><h5>Comment avez vous été emmenée à vous rendre aux camps de réfugiés kurdes de Lavrio et d’où est partie l’idée de faire une bande dessinée sur le sujet ?</h5>
 <br><i>J’ai pu connaître le camp de Lavrio grâce à une amie de longue date et camarade géographe (étudiante) qui avait fait son mémoire de master sur le camp. Elle connaissait mon travail, mes dessins et aussi mes considérations politiques et elle m’a proposé de venir avec elle, pour dessiner les lieux et travailler sur l’endroit.
 </i><span></p>
-<p><span><h5>Y a t’il des anecdotes qui vous ont marquée particulièrement au camp que vous voudriez bien partager avec nous ?</h5>
-<br><i>
+<p><span><h5>Y a t’il des anecdotes qui vous ont marquée particulièrement au camp que vous voudriez bien partager avec nous ?</h5><span>
+<p><span><i>
 Pour ce qui est des anecdotes, cela dépend si je peux parler de ce qui est dans la Bande dessinée ou s’il vaut mieux d’autres choses afin de laisser un peu de découverte.
 <br>
 – Les premiers mots qu’on m’a appris à dire en kurde, par exemple, et ce grâce à un responsable du camp, étaient : Tu es fou/folle ! Où est le docteur ?<br>
