--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -87,7 +87,7 @@
 
 <p><span><h5>
 Bonjour, pouvez-vous vous présenter pour nos lecteurs et lectrices ?</h5><span></p>
-<p><span><i>Bonjour, je suis une jeune auteure de BD et illustratrice, française, qui travaille actuellement sous le nom de Mamoste Dîn [« Mamoste Dîn » signifie « professeur folle » en kurde]. Ce nom me fut donné par des personnes du camp de Lavrio à qui je faisais faire de la gravure et des impressions.</i><span></p>
+<p><span><i>Bonjour, je suis une jeune auteure de BD et illustratrice, française, qui travaille actuellement sous le nom de Mamoste Dîn [«&#8239;Mamoste Dîn&#8239;» signifie «&#8239;professeure folle&#8239;» en kurde]. Ce nom me fut donné par des personnes du camp de Lavrio à qui je faisais faire de la gravure et des impressions.</i><span></p>
 <p><span><h5>Comment avez vous fait la connaissance du mouvement kurde?</h5><span></p>
 <p><span><i>Historiquement. Autrement dit, de la même manière que je me suis documentée sur la guerre d’Espagne en 1936, l’IRA, les zapatistes, les situationnistes, les guérillas et les divers mouvements révolutionnaires historiques. Il me semble impossible de ne pas avoir ces repères si l’on veut être pertinent politiquement. Il faut, pour avoir une compréhension juste de notre société et une perspective stratégique, connaître les différents mouvements de protestation anticapitalistes, antifascistes et révolutionnaires.
 </i><span></p>
