--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -82,7 +82,7 @@
 					
 					<tr>
 	                    <td width="500" id="article">
-					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"></a> version française version turque </h5><span>
+					<h5><br><a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer"> version française</a> version turque </h5><span>
 
 <p><span><h5>
 Okurlarımız için öncelikle kendinizi tanıtabilir misiniz ?</h5><span></p>
@@ -99,11 +99,14 @@ Lavrion kampından, çok eskiden beri tanıdığım bir dostum, yoldaşım sayes
 <p><span><i><i>Çizgi romanda bulunan anılardan bahsedebilir miyim yoksa okuyacak olanların oradan keşfetmesine izin mi verelim bilmiyorum. Mesela kampta, yöneticilerin birinden öğrendiğim ilk Kürtçe kelimelerim, “sen delisin!” ve “doktor nerede?”.
 <br>Bu cümleleri kafamda iyice tekrarladıktan sonra, yeni bilgilerimi gururla paylaşmak için karşıma çıkan ilk insana doğru koştum. Tabii o günden sonra herkes bana “deli öğretmen” diye seslenmeye başladı. “Öğretmen” demelerinin sebebi kampta bir gravür atölyesi yapmam, onlara gravür öğretmemdi. İlk kelimem “deli” olduğu için de “deli öğretmen” diye kaldı ismim. Sorunuza cevap vermek çok zor çünkü çok anım var ve hangisi daha ilginç bilmiyorum.
 <br>Kamptaki insanların ikişer ikişer, yan yana, bazen birbiriyle hiç konuşmadan sadece sigaralarını tüttürerek, düzenli bir şekilde avluda gezindiği saatler var mesela. Birlikte adımlayan iki kişi birbiriyle hiç konuşmadan yürüyordu. Cezaevi yıllarında edindikleri volta alışkanlığındandı bu.
-	<br>Lavrion kampında bolca sigara ve çay içilirdi. Paketi ilk çıkaran kişi bütün diğer yoldaşlarına uzatırdı sigarasını. Aynı şey çay için de geçerliydi. Öyleki herkes çay, şeker ve sigara kokardı sanki.
-<p><span><h5>Lavrion kampı sizde ne gibi bir etki bıraktı, bu deneyimden ne gibi izler taşıyorsunuz ? Kürt mücadelesi ile Fransa’daki mücadeleler arasında bir fark bulunuyor mu? </h5><span></p>
-<p><span><i>
+	<br>Lavrion kampında bolca sigara ve çay içilirdi. Paketi ilk çıkaran kişi bütün diğer yoldaşlarına uzatırdı sigarasını. Aynı şey çay için de geçerliydi. Öyleki herkes çay, şeker ve sigara kokardı sanki.</i><span></p>
+<p><span><h5>Lavrion kampı sizde ne gibi bir etki bıraktı, bu deneyimden ne gibi izler taşıyorsunuz ? Kürt mücadelesi ile Fransa’daki mücadeleler arasında bir fark bulunuyor mu ? </h5><span></p>
+<p><span><i>Birçok şey, özellikle dostluklar. Belki bir süreden sonra paylaşım arasıra gönderilen maillerden ibaret kalınca, dostluktan bahsetmek biraz yüzeysel kalıyordur. Fakat tanıştığım bu insanlar hâlâ bir sevdiklerinin, bir aile bireyinin ya da ortak bir anımızın resmini çizmemi istediklerinde çok seviniyorum. Haberleşmeye devam etmek ve birbirini unutmamak çok hoş bir duygu.<br>
+	Öyle düşünüyorum ki, Fransa ve Kürdistan’daki politik referanslar, devrimci fikirler tam olarak aynı değiller. PKK tarihiyle ilişkili olsun olmasın pek çok farklılık var. Mesela “demokratik konfederalizm”, Fransa’da radikal gruplar arasında pek önemli bir teori olarak görülmüyor. Sonra kişilik kültü meselesi ve buna bağlı olarak kamp içerisinde var olan komünist görsel ve afişleme. Fransa’da temkinli şekilde yaklaşılan şeyler var. Örneğin Marx, Stalin veya Öcalan olsun. Kırmızı fon üzerinde işlenen devasa portreler Fransa’da aynı tarihsel etkiye  sahip değil.
+<br>Bununla birlikte, Fransa’da ciddi radikal grupların hedeflemesi gereken pratikler söz konusu. Örneğin kamptaki politik yaşam, her bireyin katıldığı kamp düzeni, meclisler sistemi ve oturanların kendi hayatları üzerindeki somut etkileri gibi. Bu gibi deneyimleri Sarı Yelekliler de yerel ölçeklerde uygulamaya çalıştı.
+<br>Gerçi Fransa’da stratejik devrimci bir örgütlenmeden henüz bahsedemeyiz. Sarı Yelekliler olsun, az ya da çok tutarlı radikal solcular olsun, şu anda ne silahlı mücadele verecek düzeyde ne de yeterince disiplinliler. PKK gibi radikal ve tutarlı şekilde hareket edemiyorlar dolayısıyla.
 </i><span></p>
-<p><span><h5> </h5><span></p>
+<p><span><h5>Çizgi romanda Kürtlerin mücadelesi ile Sarı Yelekliler arasında bir paralellik kurmuşsunuz, bunu açabilir misiniz ? </h5><span></p>
 <p><span><i>
 </i><span></p>
 <p><span><h5> </h5><span></p>
