--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -97,9 +97,9 @@
 					<a href="https://drive.google.com/uc?id=1J-naX-y-enJP2eQtpCgoZ0Selw46hz40" title="Pdf">
 					<p><span><u>We won't die the dog’s death by Mamoste&#8239;Dîn(eng.pdf)</u></a><span></p>
 					<a href="https://drawingthetimes.com/authors/margot-gustaedt/" title="cliquer">
-					<p>Disponible aussi en anglais sur Drawing the times</a><span></p>
+					<p>Disponible aussi en anglais sur Drawing the times</a>
 					<a href="https://visionscarto.net/ne-pas-mourir-comme-des-chiens" title="cliquer">
-					<br>En français sur VisionCarto </a><span></p> 
+					<br>En français sur VisionCarto </a>
 					<a href="plagiat_ed_BD_entretien-Mamoste.html" title="cliquer">
 					<br>Entretien avec Mamoste Dîn</a><span></p>
 					
