--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -107,23 +107,24 @@ Lavrion kampından, çok eskiden beri tanıdığım bir dostum, yoldaşım sayes
 <br>Gerçi Fransa’da stratejik devrimci bir örgütlenmeden henüz bahsedemeyiz. Sarı Yelekliler olsun, az ya da çok tutarlı radikal solcular olsun, şu anda ne silahlı mücadele verecek düzeyde ne de yeterince disiplinliler. PKK gibi radikal ve tutarlı şekilde hareket edemiyorlar dolayısıyla.
 </i><span></p>
 <p><span><h5>Çizgi romanda Kürtlerin mücadelesi ile Sarı Yelekliler arasında bir paralellik kurmuşsunuz, bunu açabilir misiniz ? </h5><span></p>
-<p><span><i>
+<p><span><i>2019 yılında eylemlerin ikinci haftasından itibaren Sarı Yelekliler’in  çoğu eylemine katıldım. Benim için son derece hoş ve ilginç bir yıl oldu. Fakat Sarı Yelekliler’in dünyada ne ölçüde bir karşılığı olmuştu bilmiyordum. Öyle ki kampa geldiğimde, orada kalanlar arasında benim göz altı ve mahkeme maceralarımı duyanların bazıları, Kürt mücadelesinin öncü figürleri ya da bayraklarıyla bezenmiş sarı yeleklerini çıkarıp gösterdiler bana. Ülkesinden kaçmış, işkence görmüş, yıllarca cezaevinde yatmış, yakınlarını kaybetmiş, DAİŞ’e karşı savaşmış bu insanların gururla, Sarı Yelekliler’in yanında olduğunu söylemesi, benim için inanılmaz birşeydi. Sonra anladım ki Fransa’da yaşadığımız birkaç çatışmayla onların yaşadıklarının yanından geçemezdik bile.
+<br>Tabi bu mücadeleler temel olarak “taleplerde” birleşiyor. Fransa’daki şiddet çok daha küçük ölçekli olsa da kapitalist devletlerin direnişçileri kriminalize etmesiyle birbirine benziyor. Bunun basit bir nedeni var. Çünkü tüm bu ülkeler kapitalist ve liberaller. Az ya da çok şiddet kullanan ve de az ya da çok ırkçı, homofobik, ataerkil bir topluma sahip olan bu devletler aynı ekonomik ve politik temellere sahipler. Fransa da Türkiye gibi toplumunu sömürüyor, yabancılaştırıyor ve bireylerin özgürlüklerine el koyuyor. Bireylerin kendi yaşamlarını düzenleme gücünü elinden alıyor.
 </i><span></p>
-<p><span><h5> </h5><span></p>
-<p><span><i>
+<p><span><h5>Lavrion’daki Kürt kadınlar ile konuşabildiniz mi? Konuştuysanız, hem mülteci hem de kadın olmanın zor yükünü taşıyan bu kadınlar hakkında neler söyleyebilirsiniz ?</h5><span></p>
+<p><span><i>Evet, Kürt kadınlarla paylaşımım oldu. Kadın olmanın, durumu yadsınamaz şekilde zorlaştırdığı muhakkak, özellikle de kaçak durumdaysanız. Ben kamptayken orada bulunan kadınların çoğu ailesiyle, çocuklarıyla gelmişti. Böylesi zor koşullarda kamp hayatına, yani politik hayata katılım da zorlaşıyordu. Kamp içinde alınan tüm kararlarda kadınlar meclisinin veto hakkı olsa da, aynı kadınların politik örgütlenmeyi düşünmek için zamanları yoksa, bu veto haklarının da önemi kalmıyor.
+<br>Çocuklardan herkes sorumlu. Anne-babalar kampta çocukları için bir dayanışmanın olduğunu biliyorlar. Ama yine çocuk demek böylesi bir kamp hayatında ebeveyn için fazladan sorumluluk demek.
+<br>Üstelik çoğu kamp dışında da çalışıyor. Örneğin hiçbir kadın gravür atölyeme katılmaya zaman bulamadı. Hamile bir kadın olmanın zorluğundan bahsetmiyorum bile. Kampta oda arkadaşımız hamile bir kadındı. Almanya’da Dublin Yasası’na takılmış ve Yunanistan’a iade edilmişti. Kocası ise Almanya’da kalmıştı. Yalnız ve mülteciydi. İyi ki orada herkes dayanışma içinde. Yan odadaki kadınlar yemeğini hazırlıyor, kendisine yardım ediyorlardı. Lavrion Kampı, gördüğüm mülteci kampları ve hatta tüm illegal ortak yaşam alanları içinde, örnek gösterilecek bir yer. Hatta belki kadınlar için herhangi bir tehlikenin olmadığı tek yer.
+<br>Sokağın, polisin ve adaletin kadınla ilişkisi hep cinsiyetçi ve şiddet üzerinedir. Çizgi romanın bir bölümünün adı “kadınlar”.
+
+Bu bölümde, başka bir kampta gerçekleşen bir taciz olayında, Kadın Meclisi’nin tacizciyi yargılamasını işliyorum. Bölüm aşağı yukarı şöyle bitiyor: “Kadınlar şikayette bulunmanın gereksiz olduğunu biliyorlar. Hele ki içinde bulundukları bu durumda, adaletin onları asla duymayacağını biliyorlar. Ki öyle olamasa bile, adalete, polislere, hakimlere gidip sorunu çözmelerini istemek herkes için daha tehlikeli olacaktır. Hakimler insanları hapishaneye yollar. Bu hakimlerin bir hapishanenin ne olduğuna dair temelde hiçbir somut fikirleri yoktur. Sefalete ve eşitsizliğe dair bir fikirleri yoktur.”
 </i><span></p>
-<p><span><h5> </h5><span></p>
-<p><span><i>
+<p><span><h5>Sanatınızla bize sunduğunuz bu tanıklık dışında, eserinizin okura ne gibi bir mesaj taşımasını umut ediyorsunuz ?</h5><span></p>
+<p><span><i>İdeal olarak okurlarda politik bir farkındalık ve harekete geçme isteği yaratmak istiyorum. Devrimci mücadelenin herkesi ilgilendirdiği bilincini ve bu mücadelenin Fransa’da da gerekli olduğunu söylemek istiyorum. Sömürü, yabancılaşma, şu anki adalet ve siyaset saçmalıkları... Bunlar yalnızca Türkiye veya Avrupa dışında ki ülkeleri değil, herkesi ilgilendiriyor.
 </i><span></p>
-<p><span><h5> </h5><span></p>
-<p><span><i>
+<p><span><h5>Okurlarımız için eklemek istediğiniz birşey var mı ?</h5><span></p>
+<p><span><i>Umarım kitap hoşlarına gider.
 </i><span></p>
-<p><span><h5> </h5><span></p>
-<p><span><i>
-</i><span></p>
-<p><span><h5> </h5><span></p>
-<p><span><i>
-</i><span></p>
+
 	
 <h5><span>Disponible aussi sur : 
 	<a href="https://www.ozgurpolitika.com/haberi-cizgilerle-multecilik-145673" title="cliquer">
