--- a/plagiat_ed_BD_entretien-Mamoste_turc.html
+++ b/plagiat_ed_BD_entretien-Mamoste_turc.html
@@ -72,7 +72,7 @@
                     <tr>
 			          
 	                    <td width="500" id="titre"><span><h4>Entretien avec Mamoste Dîn,
-				</h4>à propos de <i>Ne pas mourir comme des chiens/ Köpekler Gibi Ölmemek</i>.
+				à propos de <i>Ne pas mourir comme des chiens/ Köpekler Gibi Ölmemek</i></h4>.
 			<br><h5>Réalisé par Yeni Özgür Politika et Kurdistan au féminin
 			</h5><span>    
 	         
