--- a/plagiat_ed_BD_entretien-Mamoste.html
+++ b/plagiat_ed_BD_entretien-Mamoste.html
@@ -72,7 +72,7 @@
                     <tr>
 			          
 	                    <td width="500" id="titre"><span><h4>Entretien avec Mamoste Dîn,
-				à propos de <i>Ne pas mourir comme des chiens</i></h4>.
+				<br>à propos de <i>Ne pas mourir comme des chiens</i></h4>.
 			<br><h5>Réalisé par Yeni Özgür Politika et Kurdistan au féminin
 			</h5><span>    
 	         
